--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "NODE_ENV=production webpack --mode production",
+    "build": "NODE_ENV=production webpack --mode production && cp docs/index.html docs/404.html",
     "dev": "webpack serve --mode development --open"
   },
   "keywords": [],
