Migrate to React

--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "dungeon-game-go": "github:besuhoff/dungeon-game-go",
     "eslint": "^9.17.0",
     "html-webpack-plugin": "^5.6.5",
     "prettier": "^3.4.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
     "typescript": "^5.7.2",
     "uuid": "^11.0.3",
